<?xml version="1.0" encoding="utf-8"?>
<!-- 
 	Viewer for Khan Academy
    Copyright (C) 2012 Concentric Sky, Inc.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
	>
    
    <TextView
        android:id="@+id/dialog_tos_not_endorsed"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/msg_not_endorsed"
        android:paddingBottom="10dp"
        android:textAppearance="@style/text_content"
		/>
    
    <TextView
        android:id="@+id/dialog_tos_content_freely_available"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/msg_content_freely_available"
		android:autoLink="web"
        android:paddingBottom="10dp"
        android:textAppearance="@style/text_content"
		/>
    
    <TextView
        android:id="@+id/dialog_tos_must_accept"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/msg_must_accept"
        android:paddingBottom="10dp"
        android:textAppearance="@style/text_content"
		/>
        
</LinearLayout>

