<?xml version="1.0" encoding="utf-8"?>
<!-- 
 	Viewer for Khan Academy
    Copyright (C) 2012 Concentric Sky, Inc.

    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/csky_wrapper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    android:gravity="center"
    android:background="@drawable/csky_about_background"
    >

    <ImageView android:id="@+id/about_csky_image"
        android:src="@drawable/csky_transparent_logo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".45"
        android:layout_marginBottom="40dp"
        android:layout_marginTop="40dp"
        android:scaleType="fitCenter"
        />
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".55"
        android:orientation="horizontal"
        >
        
        <LinearLayout 
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight=".1"
            ></LinearLayout>
        
        <ScrollView android:id="@+id/scrollview"
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight=".8"
            android:layout_marginBottom="20dp"
            >
            <LinearLayout 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                
			    <TextView android:id="@+id/copyright"
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:textAppearance="@style/text_about"
			        android:textColorLink="@color/csky_link"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp"
			        android:layout_marginBottom="10dp"
			        android:text="@string/msg_csky_copyright"
			        />
			
			    <TextView android:id="@+id/license"
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:textAppearance="@style/text_about"
			        android:textColorLink="@color/csky_link"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp"
			        android:layout_marginBottom="10dp"
			        android:text="@string/msg_khan_license"
			        />
			
			    <TextView android:id="@+id/dialog_tos_not_endorsed"
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp"
			        android:layout_marginBottom="10dp"
			        android:textAppearance="@style/text_about"
			        android:textColorLink="@color/csky_link"
			        android:text="@string/msg_not_endorsed"
			        />
			
			    <TextView
			        android:id="@+id/about_thanks"
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp"
			        android:layout_marginBottom="10dp"
			        android:textAppearance="@style/text_about"
			        android:textColorLink="@color/csky_link"
			        android:text="@string/attribution"
			        />
			
			    <TextView android:id="@+id/csky_license_1"
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:textAppearance="@style/text_about"
			        android:textColorLink="@color/csky_link"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp"
			        android:layout_marginBottom="10dp"
			        android:text="@string/msg_csky_license_1"
			        />
			
			    <TextView android:id="@+id/csky_license_2"
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:textAppearance="@style/text_about"
			        android:textColorLink="@color/csky_link"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp"
			        android:layout_marginBottom="10dp"
			        android:text="@string/msg_csky_license_2"
			        />
			    
			    <TextView android:id="@+id/csky_license_3"
			        android:layout_width="match_parent" 
			        android:layout_height="wrap_content"
			        android:gravity="center_horizontal"
			        android:textAppearance="@style/text_about"
			        android:textColorLink="@color/csky_link"
			        android:paddingLeft="20dp"
			        android:paddingRight="20dp"
			        android:layout_marginBottom="10dp"
			        android:text="@string/msg_csky_license_3"
			        />
            </LinearLayout>
        </ScrollView>
        
        <LinearLayout 
            android:layout_height="match_parent"
            android:layout_width="0dp"
            android:layout_weight=".1"
            ></LinearLayout>
        
    </LinearLayout>
    
    
</LinearLayout>